# case-study

./: .gitignore  README.md  data.dvc  pyproject.toml  requirements.txt
forward_context/: hybrid_search.py  main.py
forward_context/config/: config.py
forward_context/data_processor/: check_paragraph_lengths.py  get_href_roots.py  process_data.py
forward_context/utils/: clean_html_text.py  configure_logger.py  extract_linked_sentences.py  get_qdrant_client.py
forward_context/vector_database/: ingestion.py  manage_collection.py
tests/: test_api.py  test_clean_html_text.py
