[project]
name = "forward_context"
version = "0.1.0"
description = "A service for processing and retrieving contextual data"
authors = [
    {name = "soojihan",email = "suji.han.x@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-camelcase (>=2.0.0,<3.0.0)",
    "fastembed (>=0.6.1,<0.7.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["find:"]

[tool.setuptools.package-dir]
"" = "."

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"